--- a/singleProduct.html
+++ b/singleProduct.html
@@ -1,24 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>e-commerce website</title>
-
-    <!-- font-awesome cdn link -->
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Rock+Salt&display=swap');
+    </style>
+    <!-- Font-awesome CDN link -->
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" />
-
-    <!-- custom css file link -->
+    <!-- SweetAlert2 CDN -->
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <!-- Custom CSS file link -->
     <link rel="stylesheet" href="style.css">
-
 </head>
 
 <body>
-
     <section id="header">
-        <a href="#"><img src="images/logo.png" class="logo" alt=""></a>
+        <p id="logo">Bandage</p>
         <div>
             <ul id="navbar">
                 <li><a href="index.html">Home</a></li>
@@ -26,49 +26,47 @@
                 <li><a href="blog.html">Blog</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="contact.html">Contact</a></li>
-                <li id="lg-bag"><a href="cart.html"><i class="far fa-shopping-bag"></i></a></li>
+                <li id="lg-bag">
+                    <a href="cart.html">
+                        <i class="far fa-shopping-bag"></i>
+                        <span id="cart-count" class="cart-badge">0</span>
+                    </a>
+                </li>
                 <a href="#" id="close"><i class="far fa-times"></i></a>
             </ul>
         </div>
         <div id="mobile">
-            <a href="cart.html"><i class="far fa-shopping-bag"></i></a>
+            <a href="cart.html">
+                <i class="far fa-shopping-bag"></i>
+                <span id="mobile-cart-count" class="cart-badge">0</span>
+            </a>
             <i id="bar" class="fas fa-outdent"></i>
         </div>
     </section>
 
     <section id="productdetails" class="section-p1">
         <div class="single-pro-image">
-            <img src="images/products/f1.jpg" width="100%" id="MainImg" alt="">
-            <div class="small-image-group">
-                <div class="small-img-col">
-                    <img src="images/products/f1.jpg" width="100%" class="small-img" alt="">
-                </div>
-                <div class="small-img-col">
-                    <img src="images/products/f2.jpg" width="100%" class="small-img" alt="">
-                </div>
-                <div class="small-img-col">
-                    <img src="images/products/f3.jpg" width="100%" class="small-img" alt="">
-                </div>
-                <div class="small-img-col">
-                    <img src="images/products/f4.jpg" width="100%" class="small-img" alt="">
-                </div>
+            <img src="" width="100%" id="MainImg" alt="">
+            <div class="small-image-group" id="smallImageGroup">
+                <!-- Small images will be dynamically added here -->
             </div>
         </div>
         <div class="single-pro-details">
             <h6>Home / T-Shirt</h6>
-            <h4>Men's Fashion T Shirt</h4>
-            <h2>$139.00</h2>
-            <select>
+            <h4 id="productName"></h4>
+            <h2 id="productPrice"></h2>
+            <select id="sizeSelect">
                 <option>Select Size</option>
                 <option>XL</option>
                 <option>XXL</option>
                 <option>Small</option>
                 <option>Large</option>
             </select>
-            <input type="number" value="1">
-            <button class="normal">Add to Cart</button>
+            <input type="number" id="quantityInput" value="1" min="1">
+            <button class="normal" onclick="addToCartSingleProduct()">Add to Cart</button>
             <h4>Product Details</h4>
-            <span>The Gildan Ultra Cotton T-shirt is made from a substantial 6.0 oz. per sq. yd. fabric
+            <span id="productDetails">
+                The Gildan Ultra Cotton T-shirt is made from a substantial 6.0 oz. per sq. yd. fabric
                 constructed from 100% cotton, this classic fit preshrunk jersey knit provides unmatched comfort
                 with each wear. Featuring a taped neck and shoulder, and a seamless double-needle collar, and available in a range
                 of colors, it offers it all in the ultimate head-turning package.
@@ -80,7 +78,7 @@
         <h2>Featured Products</h2>
         <p>Summer Collection New Modern Design</p>
         <div class="pro-container">
-            <div class="pro">
+            <div class="pro" onclick="window.location.href='singleProduct.html?name=Cartoon Astronaut T-Shirt&price=78&mainImage=images/products/n1.jpg&smallImages=images/products/n1.jpg,images/products/f1.jpg,images/products/f2.jpg,images/products/f3.jpg';">
                 <img src="images/products/n1.jpg" alt="">
                 <div class="des">
                     <span>adidas</span>
@@ -94,9 +92,9 @@
                     </div>
                     <h4>$78</h4>
                 </div>
-                <a href="#"><i class="fas fa-shopping-cart cart"></i></a>
+                <button class="add-to-cart" onclick="event.stopPropagation(); addToCart('Cartoon Astronaut T-Shirt', 78, 'images/products/n1.jpg');"><i class="fas fa-shopping-cart"></i></button>
             </div>
-            <div class="pro">
+            <div class="pro" onclick="window.location.href='singleProduct.html?name=Cartoon Astronaut T-Shirt&price=78&mainImage=images/products/n2.jpg&smallImages=images/products/n2.jpg,images/products/f1.jpg,images/products/f2.jpg,images/products/f3.jpg';">
                 <img src="images/products/n2.jpg" alt="">
                 <div class="des">
                     <span>adidas</span>
@@ -110,9 +108,9 @@
                     </div>
                     <h4>$78</h4>
                 </div>
-                <a href="#"><i class="fas fa-shopping-cart cart"></i></a>
+                <button class="add-to-cart" onclick="event.stopPropagation(); addToCart('Cartoon Astronaut T-Shirt', 78, 'images/products/n2.jpg');"><i class="fas fa-shopping-cart"></i></button>
             </div>
-            <div class="pro">
+            <div class="pro" onclick="window.location.href='singleProduct.html?name=Cartoon Astronaut T-Shirt&price=78&mainImage=images/products/n3.jpg&smallImages=images/products/n3.jpg,images/products/f1.jpg,images/products/f2.jpg,images/products/f3.jpg';">
                 <img src="images/products/n3.jpg" alt="">
                 <div class="des">
                     <span>adidas</span>
@@ -126,9 +124,9 @@
                     </div>
                     <h4>$78</h4>
                 </div>
-                <a href="#"><i class="fas fa-shopping-cart cart"></i></a>
+                <button class="add-to-cart" onclick="event.stopPropagation(); addToCart('Cartoon Astronaut T-Shirt', 78, 'images/products/n3.jpg');"><i class="fas fa-shopping-cart"></i></button>
             </div>
-            <div class="pro">
+            <div class="pro" onclick="window.location.href='singleProduct.html?name=Cartoon Astronaut T-Shirt&price=78&mainImage=images/products/n4.jpg&smallImages=images/products/n4.jpg,images/products/f1.jpg,images/products/f2.jpg,images/products/f3.jpg';">
                 <img src="images/products/n4.jpg" alt="">
                 <div class="des">
                     <span>adidas</span>
@@ -142,7 +140,7 @@
                     </div>
                     <h4>$78</h4>
                 </div>
-                <a href="#"><i class="fas fa-shopping-cart cart"></i></a>
+                <button class="add-to-cart" onclick="event.stopPropagation(); addToCart('Cartoon Astronaut T-Shirt', 78, 'images/products/n4.jpg');"><i class="fas fa-shopping-cart"></i></button>
             </div>
         </div>
     </section>
@@ -160,10 +158,10 @@
 
     <footer class="section-p1">
         <div class="col">
-            <img class="logo" src="images/logo.png" alt="">
+            <a href="#"><p style="font-size: 30px; font-weight: 600; font-family: Rock Salt;">Bandage</p></a>
             <h4>Contact</h4>
-            <p><strong>Address:</strong> Lahore, Pakistan - 54840</p>
-            <p><strong>Phone:</strong> +92-321-4655990</p>
+            <p><strong>Address:</strong> Karachi, Pakistan - 75950</p>
+            <p><strong>Phone:</strong> +92-3262350445</p>
             <p><strong>Hours:</strong> 10:00 - 18:00, Mon - Sat</p>
             <div class="follow">
                 <h4>Follow us</h4>
@@ -178,16 +176,16 @@
         </div>
         <div class="col">
             <h4>About</h4>
-            <a href="#">About us</a>
+            <a href="about.html">About us</a>
             <a href="#">Delivery Information</a>
             <a href="#">Privacy Policy</a>
             <a href="#">Terms & Conditions</a>
-            <a href="#">Contact Us</a>
+            <a href="contact.html">Contact Us</a>
         </div>
         <div class="col">
             <h4>My Account</h4>
             <a href="#">Sign In</a>
-            <a href="#">View Cart</a>
+            <a href="cart.html">View Cart</a>
             <a href="#">My Wishlist</a>
             <a href="#">Track My Order</a>
             <a href="#">Help</a>
@@ -203,30 +201,152 @@
             <img src="images/pay/pay.png" alt="">
         </div>
         <div class="copyright">
-            <p>Created By Muhammad Awais | All Rights Reserved | &#169; 2023</p>
+            <p>Created with ❤ By <span><a href="https://www.linkedin.com/in/rao-asad-mehmood/">Rao Asad Mehmood</a></span> | All Rights Reserved | © 2025</p>
         </div>
     </footer>
 
-    <!-- javascript script file code -->
     <script>
-        var mainImg = document.getElementById("MainImg");
-        var smallImg = document.getElementsByClassName("small-img");
-        smallImg[0].onclick = function() {
-            mainImg.src = smallImg[0].src;
+        // Function to get query parameters from URL
+        function getQueryParams() {
+            const params = new URLSearchParams(window.location.search);
+            return {
+                name: params.get('name') || 'Unknown Product',
+                price: parseFloat(params.get('price')) || 0,
+                mainImage: params.get('mainImage') || 'images/products/f1.jpg',
+                smallImages: params.get('smallImages') ? params.get('smallImages').split(',') : ['images/products/f1.jpg', 'images/products/f2.jpg', 'images/products/f3.jpg', 'images/products/f4.jpg']
+            };
         }
-        smallImg[1].onclick = function () {
-            mainImg.src = smallImg[1].src;
+
+        // Load product details dynamically
+        function loadProductDetails() {
+            const { name, price, mainImage, smallImages } = getQueryParams();
+
+            // Update product details
+            document.getElementById('productName').textContent = name;
+            document.getElementById('productPrice').textContent = `$${price.toFixed(2)}`;
+            document.getElementById('MainImg').src = mainImage;
+
+            // Update small images
+            const smallImageGroup = document.getElementById('smallImageGroup');
+            smallImageGroup.innerHTML = ''; // Clear existing small images
+            smallImages.forEach(image => {
+                const smallImgDiv = document.createElement('div');
+                smallImgDiv.className = 'small-img-col';
+                const smallImg = document.createElement('img');
+                smallImg.src = image;
+                smallImg.width = '100%';
+                smallImg.className = 'small-img';
+                smallImg.alt = name;
+                smallImgDiv.appendChild(smallImg);
+                smallImageGroup.appendChild(smallImgDiv);
+            });
+
+            // Add click events to small images
+            const smallImgs = document.getElementsByClassName('small-img');
+            for (let i = 0; i < smallImgs.length; i++) {
+                smallImgs[i].onclick = function() {
+                    document.getElementById('MainImg').src = smallImgs[i].src;
+                };
+            }
         }
-        smallImg[2].onclick = function () {
-            mainImg.src = smallImg[2].src;
+
+        // Add to Cart functionality for single product
+        function addToCartSingleProduct() {
+            const { name, price, mainImage } = getQueryParams();
+            const size = document.getElementById('sizeSelect').value;
+            const quantity = parseInt(document.getElementById('quantityInput').value);
+
+            if (size === "Select Size") {
+                Swal.fire({
+                    title: 'Error!',
+                    text: 'Please select a size!',
+                    icon: 'error',
+                    confirmButtonColor: '#d33',
+                    timer: 2000,
+                    showConfirmButton: false
+                });
+                return;
+            }
+
+            let cart = JSON.parse(localStorage.getItem('cart')) || [];
+            const itemKey = `${name}-${size}`;
+            const existingItem = cart.find(item => item.name === name && item.size === size);
+
+            if (existingItem) {
+                existingItem.quantity += quantity;
+                Swal.fire({
+                    title: 'Item Updated!',
+                    text: `"${name} (Size: ${size})" quantity updated to ${existingItem.quantity}.`,
+                    icon: 'success',
+                    timer: 1500,
+                    showConfirmButton: false
+                });
+            } else {
+                cart.push({
+                    name: name,
+                    price: price,
+                    image: mainImage,
+                    size: size,
+                    quantity: quantity
+                });
+                Swal.fire({
+                    title: 'Added to Cart!',
+                    text: `"${name} (Size: ${size})" has been added to your cart!`,
+                    icon: 'success',
+                    timer: 1500,
+                    showConfirmButton: false
+                });
+            }
+
+            localStorage.setItem('cart', JSON.stringify(cart));
+            updateCartCount();
         }
-        smallImg[3].onclick = function () {
-            mainImg.src = smallImg[3].src;
+
+        // Add to Cart functionality for featured products
+        function addToCart(name, price, image) {
+            let cart = JSON.parse(localStorage.getItem('cart')) || [];
+            const existingItem = cart.find(item => item.name === name && item.image === image);
+            if (existingItem) {
+                existingItem.quantity += 1;
+                Swal.fire({
+                    title: 'Item Updated!',
+                    text: `"${name}" quantity increased to ${existingItem.quantity}.`,
+                    icon: 'success',
+                    timer: 1500,
+                    showConfirmButton: false
+                });
+            } else {
+                cart.push({
+                    name: name,
+                    price: price,
+                    image: image,
+                    quantity: 1
+                });
+                Swal.fire({
+                    title: 'Added to Cart!',
+                    text: `"${name}" has been added to your cart.`,
+                    icon: 'success',
+                    timer: 1500,
+                    showConfirmButton: false
+                });
+            }
+            localStorage.setItem('cart', JSON.stringify(cart));
+            updateCartCount();
         }
+
+        // Update cart count
+        function updateCartCount() {
+            const cartItems = JSON.parse(localStorage.getItem('cart')) || [];
+            const totalItems = cartItems.reduce((sum, item) => sum + item.quantity, 0);
+            document.getElementById('cart-count').textContent = totalItems;
+            document.getElementById('mobile-cart-count').textContent = totalItems;
+        }
+
+        // Load product details and cart count on page load
+        document.addEventListener('DOMContentLoaded', () => {
+            loadProductDetails();
+            updateCartCount();
+        });
     </script>
-
-    <!-- javascript script file link -->
-    <script src="script.js"></script>
 </body>
-
 </html>
