--- a/checkout.html
+++ b/checkout.html
@@ -15,11 +15,15 @@
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <!-- Custom CSS file link -->
     <link rel="stylesheet" href="style.css">
+
+    <!-- Firebase SDK (v9 compat version for browser compatibility) -->
+    <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-auth-compat.js"></script>
 </head>
 
 <body>
     <section id="header">
-        <p id="logo">Bandage</p>
+        <a style="text-decoration: none;" href="index.html"><p id="logo">Bandage</p></a>
         <div>
             <ul id="navbar">
                 <li><a href="index.html">Home</a></li>
@@ -32,6 +36,9 @@
                         <i class="far fa-shopping-bag"></i>
                         <span id="cart-count" class="cart-badge">0</span>
                     </a>
+                </li>
+                <li id="auth-links">
+                    <!-- Dynamically updated via JavaScript -->
                 </li>
                 <a href="#" id="close"><i class="far fa-times"></i></a>
             </ul>
@@ -138,7 +145,9 @@
 
     <footer class="section-p1">
         <div class="col">
-            <a href="#"><p style="font-size: 30px; font-weight: 600; font-family: Rock Salt;">Bandage</p></a>
+            <a href="#">
+                <p style="font-size: 30px; font-weight: 600; font-family: Rock Salt;">Bandage</p>
+            </a>
             <h4>Contact</h4>
             <p><strong>Address:</strong> Karachi, Pakistan - 75950</p>
             <p><strong>Phone:</strong> +92-3262350445</p>
@@ -181,7 +190,8 @@
             <img src="images/pay/pay.png" alt="">
         </div>
         <div class="copyright">
-            <p>Created with ❤ By <span><a href="https://www.linkedin.com/in/rao-asad-mehmood/">Rao Asad Mehmood</a></span> | All Rights Reserved | © 2025</p>
+            <p>Created with ❤ By <span><a href="https://www.linkedin.com/in/rao-asad-mehmood/">Rao Asad
+                        Mehmood</a></span> | All Rights Reserved | © 2025</p>
         </div>
     </footer>
 
@@ -202,7 +212,7 @@
             const checkoutDiscountElement = document.getElementById('checkout-discount');
             const checkoutTotalElement = document.getElementById('checkout-total');
 
-            checkoutItems.innerHTML = ''; // Clear existing items
+            checkoutItems.innerHTML = ''; 
             let subtotal = 0;
 
             if (cartItems.length === 0) {
@@ -340,8 +350,71 @@
             });
         }
 
-        // Load checkout summary on page load
-        document.addEventListener('DOMContentLoaded', loadCheckoutSummary);
+        // Initialize Firebase
+        const firebaseConfig = {
+            apiKey: "AIzaSyCNNt-5skoWuHyNvwyd2QBZ6rd9KrfJzv4",
+            authDomain: "bandage-ecommerce.firebaseapp.com",
+            projectId: "bandage-ecommerce",
+            storageBucket: "bandage-ecommerce.firebasestorage.app",
+            messagingSenderId: "1035151679859",
+            appId: "1:1035151679859:web:b97536a1d83ef1cb2fe506"
+        };
+
+        firebase.initializeApp(firebaseConfig); 
+
+        // Function to update navbar based on auth state
+        function updateNavbarAuthLinks() {
+            const authLinks = document.getElementById('auth-links');
+            firebase.auth().onAuthStateChanged((user) => {
+                if (user) {
+                    // User is logged in
+                    authLinks.innerHTML = `
+                        <li><a href="#" id="logout-link">Logout</a></li>
+                    `;
+                    document.getElementById('logout-link').addEventListener('click', (e) => {
+                        e.preventDefault();
+                        firebase.auth().signOut().then(() => {
+                            Swal.fire({
+                                title: 'Logged Out',
+                                text: 'You have been logged out successfully.',
+                                icon: 'success',
+                                confirmButtonColor: '#3085d6',
+                                timer: 1500,
+                                showConfirmButton: false
+                            }).then(() => {
+                                window.location.href = 'index.html';
+                            });
+                        }).catch((error) => {
+                            Swal.fire({
+                                title: 'Logout Failed',
+                                text: error.message,
+                                icon: 'error',
+                                confirmButtonColor: '#d33'
+                            });
+                        });
+                    });
+                } else {
+                    // User is not logged in
+                    authLinks.innerHTML = `
+                        <li><a href="login.html">Login</a></li>
+                        <li><a href="signup.html">Sign Up</a></li>
+                    `;
+                }
+            });
+        }
+
+        // Check auth state on page load and redirect to signup if not logged in
+        firebase.auth().onAuthStateChanged((user) => {
+            if (!user) {
+                window.location.href = 'signup.html'; 
+            }
+        });
+
+        // Load checkout summary and update navbar on page load
+        document.addEventListener('DOMContentLoaded', () => {
+            loadCheckoutSummary();
+            updateNavbarAuthLinks();
+        });
     </script>
 </body>
 
