--- a/contact.html
+++ b/contact.html
@@ -8,33 +8,49 @@
     <title>e-commerce website</title>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Rock+Salt&display=swap');
-        </style>
-    <!-- font-awesome cdn link -->
+    </style>
+    <!-- Font-awesome CDN link -->
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" />
 
-    <!-- custom css file link -->
+    <!-- Custom CSS file link -->
     <link rel="stylesheet" href="style.css">
 
+    <!-- Firebase SDK (v9 compat version for browser compatibility) -->
+    <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-auth-compat.js"></script>
+
+    <!-- SweetAlert2 CDN -->
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </head>
 
 <body>
 
     <section id="header">
-        <p id="logo">Bandage</p>
-
+        <a style="text-decoration: none;" href="index.html"><p id="logo">Bandage</p></a>
         <div>
             <ul id="navbar">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="shop.html">Shop</a></li>
                 <li><a href="blog.html">Blog</a></li>
                 <li><a href="about.html">About</a></li>
-                <li><a class="active" href="contact.html">Contact</a></li>
-                <li id="lg-bag"><a href="cart.html"><i class="far fa-shopping-bag"></i></a></li>
+                <li><a href="contact.html">Contact</a></li>
+                <li id="lg-bag">
+                    <a href="cart.html">
+                        <i class="far fa-shopping-bag"></i>
+                        <span id="cart-count" class="cart-badge">0</span>
+                    </a>
+                </li>
+                <li id="auth-links">
+                    <!-- Dynamically updated via JavaScript -->
+                </li>
                 <a href="#" id="close"><i class="far fa-times"></i></a>
             </ul>
         </div>
         <div id="mobile">
-            <a href="cart.html"><i class="far fa-shopping-bag"></i></a>
+            <a href="cart.html">
+                <i class="far fa-shopping-bag"></i>
+                <span id="mobile-cart-count" class="cart-badge">0</span>
+            </a>
             <i id="bar" class="fas fa-outdent"></i>
         </div>
     </section>
@@ -60,7 +76,7 @@
                 </li>
                 <li>
                     <i class="fas fa-phone-alt"></i>
-                    <p>+92-326-2350445
+                    <p>+92-326-2350445</p>
                 </li>
                 <li>
                     <i class="fas fa-clock"></i>
@@ -70,10 +86,10 @@
         </div>
         <div class="map">
             <iframe
-    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d231501.9651730539!2d66.97488569360632!3d24.860734894466477!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3eb33e06651d4bbf%3A0x9cf92f44555a0c23!2sKarachi%2C%20Karachi%20City%2C%20Sindh%2C%20Pakistan!5e0!3m2!1sen!2s!4v1697845123467!5m2!1sen!2s"
-    width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
-    referrerpolicy="no-referrer-when-downgrade">
-</iframe>
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d231501.9651730539!2d66.97488569360632!3d24.860734894466477!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3eb33e06651d4bbf%3A0x9cf92f44555a0c23!2sKarachi%2C%20Karachi%20City%2C%20Sindh%2C%20Pakistan!5e0!3m2!1sen!2s!4v1697845123467!5m2!1sen!2s"
+                width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade">
+            </iframe>
         </div>
     </section>
 
@@ -90,15 +106,18 @@
         <div class="people">
             <div>
                 <img src="images/people/1.png" alt="">
-                <p><span>John Doe</span> Senior Marketing Manager<br>Phone: +000 123 000 77 88<br>Email: contact@example.com</p>
+                <p><span>John Doe</span> Senior Marketing Manager<br>Phone: +000 123 000 77 88<br>Email:
+                    contact@example.com</p>
             </div>
             <div>
                 <img src="images/people/2.png" alt="">
-                <p><span>William Smith</span> Senior Marketing Manager<br>Phone: +000 123 000 77 88<br>Email: contact@example.com</p>
+                <p><span>William Smith</span> Senior Marketing Manager<br>Phone: +000 123 000 77 88<br>Email:
+                    contact@example.com</p>
             </div>
             <div>
                 <img src="images/people/3.png" alt="">
-                <p><span>Emma Stone</span> Senior Marketing Manager<br>Phone: +000 123 000 77 88<br>Email: contact@example.com</p>
+                <p><span>Emma Stone</span> Senior Marketing Manager<br>Phone: +000 123 000 77 88<br>Email:
+                    contact@example.com</p>
             </div>
         </div>
     </section>
@@ -116,7 +135,9 @@
 
     <footer class="section-p1">
         <div class="col">
-            <a href="#"><p style="font-size: 30px; font-weight: 600; font-family: Rock Salt;">Bandage</p></a>
+            <a href="#">
+                <p style="font-size: 30px; font-weight: 600; font-family: Rock Salt;">Bandage</p>
+            </a>
             <h4>Contact</h4>
             <p><strong>Address:</strong> Karachi, Pakistan - 75950</p>
             <p><strong>Phone:</strong> +92-3262350445</p>
@@ -159,12 +180,87 @@
             <img src="images/pay/pay.png" alt="">
         </div>
         <div class="copyright">
-            <p>Created with ❤ By <span><a href="https://www.linkedin.com/in/rao-asad-mehmood/">Rao Asad Mehmood</a></span> | All Rights Reserved | &#169; 2025</p>
+            <p>Created with ❤ By <span><a href="https://www.linkedin.com/in/rao-asad-mehmood/">Rao Asad
+                        Mehmood</a></span> | All Rights Reserved | © 2025</p>
         </div>
     </footer>
 
-    <!-- javascript script file link -->
-    <script src="script.js"></script>
+   
+    <script>
+        // Initialize Firebase
+        const firebaseConfig = {
+            apiKey: "AIzaSyCNNt-5skoWuHyNvwyd2QBZ6rd9KrfJzv4",
+            authDomain: "bandage-ecommerce.firebaseapp.com",
+            projectId: "bandage-ecommerce",
+            storageBucket: "bandage-ecommerce.firebasestorage.app",
+            messagingSenderId: "1035151679859",
+            appId: "1:1035151679859:web:b97536a1d83ef1cb2fe506"
+        };
+
+        firebase.initializeApp(firebaseConfig); 
+
+        // Function to update cart count
+        function updateCartCount() {
+            const cartItems = JSON.parse(localStorage.getItem('cart')) || [];
+            const totalItems = cartItems.reduce((sum, item) => sum + item.quantity, 0);
+            document.getElementById('cart-count').textContent = totalItems;
+            document.getElementById('mobile-cart-count').textContent = totalItems;
+        }
+
+        // Function to update navbar based on auth state
+        function updateNavbarAuthLinks() {
+            const authLinks = document.getElementById('auth-links');
+            firebase.auth().onAuthStateChanged((user) => {
+                if (user) {
+                    // User is logged in
+                    authLinks.innerHTML = `
+                        <li><a href="#" id="logout-link">Logout</a></li>
+                    `;
+                    document.getElementById('logout-link').addEventListener('click', (e) => {
+                        e.preventDefault();
+                        firebase.auth().signOut().then(() => {
+                            Swal.fire({
+                                title: 'Logged Out',
+                                text: 'You have been logged out successfully.',
+                                icon: 'success',
+                                confirmButtonColor: '#3085d6',
+                                timer: 1500,
+                                showConfirmButton: false
+                            }).then(() => {
+                                window.location.href = 'index.html';
+                            });
+                        }).catch((error) => {
+                            Swal.fire({
+                                title: 'Logout Failed',
+                                text: error.message,
+                                icon: 'error',
+                                confirmButtonColor: '#d33'
+                            });
+                        });
+                    });
+                } else {
+                    // User is not logged in
+                    authLinks.innerHTML = `
+                        <li><a href="login.html">Login</a></li>
+                        <li><a href="signup.html">Sign Up</a></li>
+                    `;
+                }
+            });
+        }
+
+        // Check auth state on page load and redirect to signup if not logged in
+        firebase.auth().onAuthStateChanged((user) => {
+            if (!user) {
+                window.location.href = 'signup.html'; 
+            }
+        });
+
+        // Load cart count and update navbar on page load
+        document.addEventListener('DOMContentLoaded', () => {
+            updateCartCount();
+            updateNavbarAuthLinks();
+        });
+    </script>
 </body>
 
 </html>
