--- a/shop.html
+++ b/shop.html
@@ -14,15 +14,19 @@
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <!-- Custom CSS file link -->
     <link rel="stylesheet" href="style.css">
+
+    <!-- Firebase SDK (v9 compat version for browser compatibility) -->
+    <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-auth-compat.js"></script>
 </head>
 
 <body>
     <section id="header">
-        <p id="logo">Bandage</p>
+        <a style="text-decoration: none;" href="index.html"><p id="logo">Bandage</p></a>
         <div>
             <ul id="navbar">
                 <li><a href="index.html">Home</a></li>
-                <li><a class="active" href="shop.html">Shop</a></li>
+                <li><a href="shop.html">Shop</a></li>
                 <li><a href="blog.html">Blog</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="contact.html">Contact</a></li>
@@ -31,6 +35,9 @@
                         <i class="far fa-shopping-bag"></i>
                         <span id="cart-count" class="cart-badge">0</span>
                     </a>
+                </li>
+                <li id="auth-links">
+                    <!-- Dynamically updated via JavaScript -->
                 </li>
                 <a href="#" id="close"><i class="far fa-times"></i></a>
             </ul>
@@ -378,6 +385,7 @@
 
     <!-- JavaScript to handle Add to Cart and Cart Count -->
     <script>
+        // Function to add items to cart
         function addToCart(name, price, image) {
             let cart = JSON.parse(localStorage.getItem('cart')) || [];
             const existingItem = cart.find(item => item.name === name && item.image === image);
@@ -409,6 +417,7 @@
             updateCartCount();
         }
 
+        // Function to update cart count
         function updateCartCount() {
             const cartItems = JSON.parse(localStorage.getItem('cart')) || [];
             const totalItems = cartItems.reduce((sum, item) => sum + item.quantity, 0);
@@ -416,7 +425,71 @@
             document.getElementById('mobile-cart-count').textContent = totalItems;
         }
 
-        document.addEventListener('DOMContentLoaded', updateCartCount);
+        // Initialize Firebase
+        const firebaseConfig = {
+            apiKey: "AIzaSyCNNt-5skoWuHyNvwyd2QBZ6rd9KrfJzv4",
+            authDomain: "bandage-ecommerce.firebaseapp.com",
+            projectId: "bandage-ecommerce",
+            storageBucket: "bandage-ecommerce.firebasestorage.app",
+            messagingSenderId: "1035151679859",
+            appId: "1:1035151679859:web:b97536a1d83ef1cb2fe506"
+        };
+
+        firebase.initializeApp(firebaseConfig); 
+
+        // Function to update navbar based on auth state
+        function updateNavbarAuthLinks() {
+            const authLinks = document.getElementById('auth-links');
+            firebase.auth().onAuthStateChanged((user) => {
+                if (user) {
+                    // User is logged in
+                    authLinks.innerHTML = `
+                        <li><a href="#" id="logout-link">Logout</a></li>
+                    `;
+                    document.getElementById('logout-link').addEventListener('click', (e) => {
+                        e.preventDefault();
+                        firebase.auth().signOut().then(() => {
+                            Swal.fire({
+                                title: 'Logged Out',
+                                text: 'You have been logged out successfully.',
+                                icon: 'success',
+                                confirmButtonColor: '#3085d6',
+                                timer: 1500,
+                                showConfirmButton: false
+                            }).then(() => {
+                                window.location.href = 'index.html';
+                            });
+                        }).catch((error) => {
+                            Swal.fire({
+                                title: 'Logout Failed',
+                                text: error.message,
+                                icon: 'error',
+                                confirmButtonColor: '#d33'
+                            });
+                        });
+                    });
+                } else {
+                    // User is not logged in
+                    authLinks.innerHTML = `
+                        <li><a href="login.html">Login</a></li>
+                        <li><a href="signup.html">Sign Up</a></li>
+                    `;
+                }
+            });
+        }
+
+      
+        firebase.auth().onAuthStateChanged((user) => {
+            if (!user) {
+                window.location.href = 'signup.html'; 
+            }
+        });
+
+        // Load cart count and update navbar on page load
+        document.addEventListener('DOMContentLoaded', () => {
+            updateCartCount();
+            updateNavbarAuthLinks();
+        });
     </script>
 </body>
 </html>
